--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
-    "dependencies": {
-        "jquery": "^3.4.1"
-    }
+    "dependencies": {}
 }
