--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
-    "dependencies": {}
+    "dependencies": {
+        "flip-toolkit": "^7.0.9"
+    }
 }
