--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^5.1",
+        "vich/uploader-bundle": "^1.11",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
