--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "flip-toolkit": "^7.0.9",
+        "jquery": "^3.4.1"
     }
 }
